[package]
name = "cmon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"  # Required for let-chains (stabilized in 1.76) and edition 2024
authors = ["cmon contributors"]
description = "Fast cluster monitoring tool for Slurm"
license = "MIT"

[[bin]]
name = "cmon"
path = "src/main.rs"

[dependencies]
# JSON serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI framework
clap = { version = "4.5", features = ["derive", "color", "suggestions"] }

# Terminal formatting and colors
tabled = { version = "0.16", features = ["ansi"] }
owo-colors = "4.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Date/time handling
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }

# Signal handling for Ctrl+C
ctrlc = "3.4"

# Terminal handling for watch mode and TUI input
crossterm = { version = "0.28", features = ["event-stream"] }

# TUI framework
ratatui = "0.29"

# Async runtime for TUI
tokio = { version = "1", features = ["full", "rt-multi-thread", "macros", "time", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Clipboard support for TUI
arboard = "3"

# Config directory and file parsing
dirs = "5"
toml = "0.8"

# Binary path discovery
which = "7"

# Logging for TUI debugging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Interactive prompts for devrun
dialoguer = "0.11"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "cmon_bench"
harness = false
